Fixed alignment icons

--- a/src/Contact/contact.scss
+++ b/src/Contact/contact.scss
@@ -44,6 +44,7 @@ $max-width: 1000px;
           margin-top: 10px;
           display: flex;
           justify-content: flex-start;
+          align-items: center;
 
           svg {
             color: rgba(51, 51, 51, 0.6);
@@ -80,7 +81,7 @@ $max-width: 1000px;
       .contact__image {
         width: 100%;
         height: 50vw;
-        max-height: 500px;
+        max-height: 460px;
       }
 
       .contact__content {
